Changes in version 0.0.11 - UNRELEASED:
 * Bug 22910: Deprecate the volatile extension dir option.

Changes in version 0.0.10 - 2017-07-12:
 * Bug 22829: Remove default obfs4 bridge riemann.
 * Bug 22853: Something in SelfRando is totally brain damaged.
 * Bug 22899: `about:addons`'s "Get Addons" pane is unsafe and should be
              treated as such.
 * Bug 22901: Clarify/expand on the warnings for all the config settings.

Changes in version 0.0.9 - 2017-07-03:
 * Bug 22712: Suppress ATK Bridge initialization which will never work.
 * Bug 20773: Stop mounting /proc in the Tor Browser container.
 * Fix the build being broken on Debian Jessie due to #22648.
 * Remove the undocumented command line options that enable unsafe behavior.

Changes in version 0.0.8 - 2017-06-19:
 * Bug 20776: Remove the X11 `MIT-SHM` workaround from the stub.
 * Bug 22470: Resync the bridges.
 * Bug 22607: Make it clear that basically 0 active development is happening.
 * Bug 22648: Prevent the "easy" to fix X11 related sandbox escapes.
 * Bug 22650: Make it clear that Pulse Audio is potentially dangerous
   to enable.

Changes in version 0.0.7 - 2017-05-22:
 * Bug 21977: Fetch install/update metadata files from a different location.
 * Bug 22038: Stub out `pa_start_child_for_read`.

Changes in version 0.0.6 - 2017-04-19:
 * Add back the old release MAR signing key.

Changes in version 0.0.5 - 2017-04-13:
 * Bug 21764: Use bubblewrap's `--die-with-parent` when supported.
 * Fix e10s Web Content crash on systems with grsec kernels.
 * Add `prlimit64` to the firefox system call whitelist.

Changes in version 0.0.4 - 2017-04-12:
 * Bug 21928: Force a reinstall if an existing hardened bundle is present.
 * Bug 21929: Remove hardened/ASAN related code.
 * Bug 21927: Remove the ability to install/update the hardened bundle.
 * Bug 21244: Update the MAR signing key for 7.0.
 * Bug 21536: Remove asn's scramblesuit bridge from Tor Browser.
 * Fix compilation with Go 1.8.