@@ -1,5 +1,6 @@
 Changes in version 0.0.11 - UNRELEASED:
  * Bug 22910: Deprecate the volatile extension dir option.
+ * Bug 22932: Add experimental Amensiac Profile Directory support.
 
 Changes in version 0.0.10 - 2017-07-12:
  * Bug 22829: Remove default obfs4 bridge riemann.
